# MyTrace

./: .gitmodules  CMakeLists.txt  out.ppm
src/: Camera.cpp  Camera.hpp  Color.h  Hit.hpp  Lambert.cpp  Lambert.h  Material.hpp  Metal.cpp  Metal.hpp  Object.hpp  Random.cpp  Random.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.h  Sphere.cpp  Sphere.hpp  main.cpp
